--- a/css/desktop.css
+++ b/css/desktop.css
@@ -8,11 +8,47 @@
     padding-bottom: 120px;
   }
   .team-item {
-    background: var(--background-color);
-    box-shadow: var(--box-shadow);
-    border-radius: 0px 0px 4px 4px;
     flex-basis: calc((100% - 72px) / 4);
     text-align: center;
-    max-width: 264px;
+    margin-bottom: 0;
+  }
+
+  .team-list {
+    display: flex;
+    gap: 24px;
+  }
+
+  .team-list-item:not(:last-child) {
+    margin-right: 24px;
+  }
+
+  .team-content {
+    padding: 32px 16px;
   }
 }
+
+/*
+.social-list-link {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  border-radius: 50%;
+  background-color: var(--team-background-color);
+  justify-content: center;
+  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--team-hover-background-color);
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+*/
