--- a/css/styles.css
+++ b/css/styles.css
@@ -52,12 +52,13 @@ body {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
 }
 
 /*--------Контейнер адаптив--------*/
 @media screen and (min-width: 480px) {
   .comtainer {
-    width: 426px;
+    width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -333,8 +334,16 @@ img {
   box-shadow: var(--box-shadow);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
-  width: 100%;
+  max-width: 264px;
+  /*display: block;*/
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 72px;
 }
+.team-item:nth-last-child(1) {
+  margin-bottom: 0;
+}
+
 .team-list {
   display: flex;
   gap: 24px;
