--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,6 @@ body {
 @media screen and (min-width: 480px) {
   .comtainer {
     width: 480px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
@@ -338,7 +336,6 @@ img {
   /*display: block;*/
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 72px;
 }
 .team-item:nth-last-child(1) {
   margin-bottom: 0;
@@ -346,7 +343,8 @@ img {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  row-gap: 72px;
 }
 
 .team-list-item:not(:last-child) {
