--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,6 +9,8 @@
 
   .advantages-list {
     flex-wrap: wrap;
+    flex-direction: row;
+    column-gap: 24px;
   }
   .advantages-item {
     width: calc((100% - 24px) / 2);
@@ -33,10 +35,25 @@
   .team-item {
     width: calc((100% - 24px) / 2);
   }
+  .customers-container {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+
+  .customer-item {
+    width: calc((100% - 16px * 2) / 3);
+  }
+
+  .customer-item:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  .customer-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (max-width: 1157px) {
-  .article-container,
   .advantages-icon,
   .advantages-box {
     display: none;
