--- a/css/tablet.css
+++ b/css/tablet.css
@@ -21,9 +21,11 @@
   .advantages-text {
     text-align: left;
   }
+  .section.article {
+    display: none;
+  }
   .team {
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding: 96px 108px;
   }
 
   .team-list {
@@ -39,17 +41,12 @@
     padding-top: 96px;
     padding-bottom: 96px;
   }
-
+  .customer-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
   .customer-item {
-    width: calc((100% - 16px * 2) / 3);
-  }
-
-  .customer-item:nth-child(3n) {
-    margin-right: 0;
-  }
-
-  .customer-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+    margin-right: 24px;
   }
 }
 
@@ -57,5 +54,23 @@
   .advantages-icon,
   .advantages-box {
     display: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .article-title,
+  .advantages-box {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .customer-list {
+    max-width: 552px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .client {
+    width: calc((100% - 24px * 2) / 3);
   }
 }
