--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,10 +1,68 @@
 @media screen and (min-width: 1200px) {
-  .comtainer {
-    max-width: 1158px;
+  .container {
+    width: 1158px;
+  }
+  .header-mailto,
+  .header-tel {
+    font-size: 16px;
+    line-height: 1.5;
+    font-style: normal;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+  }
+  .address-list {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    padding: 24px 0;
+  }
+  .hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero.jpg);
+    max-width: 1440px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--background-hero-color);
   }
 
-  .advantages {
-    padding: 120px 156px;
+  .hero-title {
+    margin-bottom: 48px;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    width: 496px;
+  }
+
+  .hero-button {
+    font-family: inherit;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
+    color: var(--secondary-font-color);
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    border-radius: 4px;
+    padding: 16px 32px 16px 32px;
+    margin: 0 auto;
+    border: none;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .hero-button:hover {
+    background: var(--hovet-background-color);
   }
 
   .advantages-items {
@@ -12,7 +70,9 @@
     gap: 24px;
     list-style: none;
   }
-
+  .advantages-list-item:not(:last-child) {
+    margin-right: 24px;
+  }
   .advantages-title {
     color: var(--title-text-color);
     font-weight: 500;
@@ -36,25 +96,25 @@
     margin-top: 0;
     width: 264px;
     display: block;
-    gap: 24px;
     list-style: none;
   }
 
   .advantages-box {
+    display: flex;
     width: 264px;
     height: 112px;
     margin-bottom: 8px;
     background: var(--advantages-box-color);
     border-radius: 4px;
-    display: flex;
     justify-content: center;
     align-items: center;
+    background-position: center;
   }
-  .article {
+  /*.article {
     padding: 120px 156px;
-  }
-  .team {
-    padding: 120px 156px;
+  }*/
+  .team-container {
+    padding: 120px 0;
   }
   .team-item {
     width: calc((100% - 72px) / 4);
@@ -63,8 +123,8 @@
   .team-list-item:not(:last-child) {
     margin-right: 24px;
   }
-  .customers {
-    padding: 120px 156px;
+  .customers-container {
+    padding: 120px 0;
   }
 
   .customer-title {
@@ -80,6 +140,49 @@
 
   .customer-list {
     display: flex;
-    gap: 24px;
+    flex-wrap: nowrap;
+  }
+  .customer-item {
+    width: calc((100% - (24px * 5)) / 6);
+  }
+  .customer-item:last-child {
+    margin-right: 0;
+  }
+  .customer-link {
+    height: 88px;
+    width: 168px;
+  }
+  /* Background image */
+
+  @media (min-device-pixel-ratio: 1),
+    (-webkit-min-device-pixel-ratio: 1),
+    (-o-min-device-pixel-ratio: 1/1),
+    (min-resolution: 96dpi),
+    (min-resolution: 1dppx) {
+    .section.hero {
+      background-image: linear-gradient(
+          to right,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-dekstop-1x.jpg);
+      background-color: var(--background-hero-color);
+    }
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (-o-min-device-pixel-ratio: 2/1),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section.hero {
+      background-image: linear-gradient(
+          to right,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-dekstop-2x.jpg);
+      background-color: var(--background-hero-color);
+    }
   }
 }
