--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,33 @@
 @media screen and (min-width: 768px) {
-  .comtainer {
-    max-width: 768px;
+  .container {
+    width: 768px;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+  }
+  .header-tel {
+    margin-top: 12px;
+  }
+  .contact-address {
+    margin-left: auto;
+  }
+  .header-mailto,
+  .header-tel {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+  .hero-title {
+    margin-bottom: 52px;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    width: 496px;
+  }
+  .hero {
+    padding: 112px 136px;
+    text-align: center;
   }
 
   .advantages {
@@ -24,8 +51,8 @@
   .section.article {
     display: none;
   }
-  .team {
-    padding: 96px 108px;
+  .team-container {
+    padding: 96px 0;
   }
 
   .team-list {
@@ -41,12 +68,57 @@
     padding-top: 96px;
     padding-bottom: 96px;
   }
+
   .customer-list {
+    /* width: 552px;*/
     display: flex;
     flex-wrap: wrap;
+    row-gap: 72px;
   }
   .customer-item {
+    flex-basis: calc((100% - 2 * 24px) / 3);
+    margin-bottom: 0;
+  }
+  .customer-list-item:not(:last-child) {
     margin-right: 24px;
+  }
+
+  .customer-link {
+    height: 88px;
+    width: 168px;
+  }
+  /* Background image */
+
+  @media (min-device-pixel-ratio: 1),
+    (-webkit-min-device-pixel-ratio: 1),
+    (-o-min-device-pixel-ratio: 1/1),
+    (min-resolution: 96dpi),
+    (min-resolution: 1dppx) {
+    .section.hero {
+      background-image: linear-gradient(
+          to right,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-tablet-1x.jpg);
+      background-color: var(--background-hero-color);
+    }
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (-o-min-device-pixel-ratio: 2/1),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section.hero {
+      background-image: linear-gradient(
+          to right,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-tablet-2x.jpg);
+      background-color: var(--background-hero-color);
+    }
   }
 }
 
@@ -70,7 +142,7 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .client {
+  .customer-item {
     width: calc((100% - 24px * 2) / 3);
   }
 }
