--- a/css/desktop.css
+++ b/css/desktop.css
@@ -17,8 +17,6 @@
     padding: 24px 0;
   }
   .hero {
-    padding-top: 188px;
-    padding-bottom: 188px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -31,46 +29,33 @@
     margin-right: auto;
     background-color: var(--background-hero-color);
   }
-
+  .hero-container {
+    padding: 188px;
+  }
   .hero-title {
-    margin-bottom: 48px;
+    margin: 0 auto 48px;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    width: 496px;
-  }
-
-  .hero-button {
-    font-family: inherit;
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-
     color: var(--secondary-font-color);
-    background: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
-    border-radius: 4px;
-    padding: 16px 32px 16px 32px;
-    margin: 0 auto;
-    border: none;
-    display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    max-width: 496px;
+    text-align: center;
   }
 
-  .hero-button:hover {
-    background: var(--hovet-background-color);
+  .advantages-container {
+    padding: 120px 0;
+    max-width: 100%;
   }
-
-  .advantages-items {
+  .advantages-item {
+    list-style: none;
+    margin-bottom: 0;
+  }
+  .advantages-list {
     display: flex;
     gap: 24px;
-    list-style: none;
   }
-  .advantages-list-item:not(:last-child) {
+  */ .advantages-list-item:not(:last-child) {
     margin-right: 24px;
   }
   .advantages-title {
@@ -141,16 +126,16 @@
   .customer-list {
     display: flex;
     flex-wrap: nowrap;
+
+    gap: 24px;
   }
-  .customer-item {
-    width: calc((100% - (24px * 5)) / 6);
-  }
+
   .customer-item:last-child {
     margin-right: 0;
   }
   .customer-link {
-    height: 88px;
     width: 168px;
+    height: 88px;
   }
   /* Background image */
 
@@ -177,7 +162,6 @@
     (min-resolution: 2dppx) {
     .section.hero {
       background-image: linear-gradient(
-          to right,
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
