--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,21 +1,66 @@
 @media screen and (min-width: 480px) {
   .comtainer {
     width: 428px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .ping-mob.mobil {
+    font-size: 26px;
+  }
+
+  .modal-policy {
+    font-size: 8px;
+    letter-spacing: 0.02em;
+  }
+
+  .chapter-social:not(:last-child) {
+    margin-right: 28px;
+  }
+  .header-nav-wrap {
+    background-color: #fff;
+    max-width: 337px;
+    width: 100%;
+    position: fixed;
+    right: 0;
+    top: 0;
+  }
+
+  .header-btn-mobile-close {
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
   }
   .hero-title {
-    margin-bottom: 72px;
+    margin: 0 auto 72px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     color: var(--secondary-font-color);
-    width: 320px;
+    max-width: 320px;
+    text-align: center;
   }
   .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--background-hero-color);
+    max-width: 428px;
+  }
+  .hero-container {
     padding: 112px 56px;
   }
+
   .advantages-container {
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding: 96px 0px;
+    max-width: 428px;
   }
   .advantages-title {
     text-align: center;
@@ -35,7 +80,7 @@
   }
 
   .customer-list {
-    /*width: 404px;*/
+    max-width: 404px;
     margin-right: auto;
     margin-left: auto;
     display: flex;
@@ -53,8 +98,8 @@
   }
 
   .customer-link {
-    height: 88px;
-    width: 190px;
+    width: 100%;
+    height: 100%;
   }
   .team-container {
     padding: 96px 0;
@@ -83,9 +128,8 @@
     (-o-min-device-pixel-ratio: 2/1),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    .section.hero {
+    .hero {
       background-image: linear-gradient(
-          to right,
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
