--- a/css/styles.css
+++ b/css/styles.css
@@ -178,21 +178,17 @@ img {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--background-hero-color);
-}
-
-.hero-title {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 48px;
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  color: var(--secondary-font-color);
-  /* width: 496px;*/
   text-align: center;
 }
 
+.hero-title {
+  color: var(--secondary-font-color);
+  text-align: center;
+  margin: 0 auto 72px;
+}
+.hero-container {
+  padding: 112px 56px;
+}
 .hero-button {
   font-family: inherit;
   cursor: pointer;
@@ -216,9 +212,152 @@ img {
 .hero-button:hover {
   background: var(--hovet-background-color);
 }
+/* Mobile menu */
+
+.mobile-menu {
+  position: fixed;
+  transform: scaleY(0);
+  z-index: 100;
+  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 80px;
+  padding-left: 40px;
+  padding-bottom: 40px;
+  background-color: var(--background-color);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.mobile-menu.is-open {
+  transform: scaleY(1);
+  transform-origin: top;
+}
+
+.mobile-menu.is-open .link.mob-menu-open {
+  color: var(--active-color);
+}
+
+.mobile-menu .mobile-social {
+  margin-top: auto;
+}
+
+.btn-menu-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--third-color);
+}
+
+.btn-menu-close:focus,
+.btn-menu-close:hover {
+  background-color: var(--active-color);
+  fill: var(--secondary-font-color);
+}
+
+.mob-nav .link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-decoration-line: none;
+}
+
+.mob-nav .link:hover,
+.mob-nav .link:focus {
+  color: var(--active-color);
+}
+
+.address-mob {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.address-mob .ping-mob {
+  display: block;
+}
+
+.address-mob .ping-mob:hover,
+.address-mob .ping-mob:focus {
+  color: var(--accent-color);
+}
+
+.ping-mob {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--primary-text-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration-line: none;
+}
+
+.ping-mob.mobil {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.menu-address {
+  margin-top: auto;
+}
+
+/* Mobile menu's social */
+
+.mob-social-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.chapter-social {
+  list-style: none;
+  width: 40px;
+  height: 40px;
+}
+
+.chapter-social:not(:last-child) {
+  margin-right: 56px;
+}
+
+.chapter-social .mobile-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: none;
+  background-color: var(--hover-team-color);
+}
+
+.chapter-social .mobile-link:focus,
+.chapter-social .mobile-link:hover {
+  background-color: var(--active-color);
+}
 
 /* Advantages*/
-
+.advantages-container {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
 .advantages-title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -229,6 +368,7 @@ img {
   margin-bottom: 8px;
   display: block;
   list-style: none;
+  text-align: center;
 }
 
 .advantages-text {
@@ -239,8 +379,14 @@ img {
   margin-top: 0;
   display: block;
   list-style: none;
+  text-align: left;
 }
-
+.advantages-item {
+  margin-bottom: 72px;
+}
+.advantages-item:last-child {
+  margin-bottom: 0;
+}
 /*article*/
 
 .article {
@@ -272,6 +418,9 @@ img {
 /*Team*/
 .team {
   background-color: var(--primare-background-color);
+}
+.team-container {
+  padding: 96px 0;
 }
 
 .team-title {
@@ -364,6 +513,28 @@ img {
 }
 
 /*-------Customers-------*/
+.customers-container {
+  padding: 96px 15px;
+}
+.customer-list {
+  max-width: 404px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  row-gap: 72px;
+  justify-content: center;
+}
+.customer-item {
+  margin-bottom: 0px;
+  flex-basis: calc((100% - 16px) / 2);
+  height: 88px;
+}
+.customer-item:nth-child(3n) {
+  margin-right: 0;
+}
+
 .customer-title {
   font-weight: 700;
   font-size: 36px;
@@ -383,6 +554,7 @@ img {
   justify-content: center;
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 100%;
 }
 
 .customer-icon {
