--- a/css/tablet.css
+++ b/css/tablet.css
@@ -18,20 +18,22 @@
     line-height: 1.17;
     letter-spacing: 0.04em;
   }
+  .hero {
+    max-width: 768px;
+  }
   .hero-title {
-    margin-bottom: 52px;
+    margin: 0 auto 52px;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
-    width: 496px;
+    max-width: 496px;
   }
-  .hero {
+  .hero-container {
     padding: 112px 136px;
-    text-align: center;
   }
-
-  .advantages {
-    padding: 96px 16px;
+  .advantages-container {
+    padding: 96px 0px;
+    max-width: 726px;
   }
 
   .advantages-list {
@@ -43,6 +45,12 @@
     width: calc((100% - 24px) / 2);
     margin-top: 0;
     margin-right: auto;
+    text-align: left;
+  }
+  .advantages-item:nth-child(n + 2) {
+    margin-bottom: 0;
+  }
+  .advantages-title {
     text-align: left;
   }
   .advantages-text {
@@ -65,12 +73,10 @@
     width: calc((100% - 24px) / 2);
   }
   .customers-container {
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding: 96px 0;
   }
 
   .customer-list {
-    /* width: 552px;*/
     display: flex;
     flex-wrap: wrap;
     row-gap: 72px;
@@ -85,7 +91,6 @@
 
   .customer-link {
     height: 88px;
-    width: 168px;
   }
   /* Background image */
 
@@ -112,7 +117,6 @@
     (min-resolution: 2dppx) {
     .section.hero {
       background-image: linear-gradient(
-          to right,
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
@@ -130,7 +134,8 @@
 }
 @media screen and (max-width: 767px) {
   .article-title,
-  .advantages-box {
+  .advantages-box,
+  .advantages-icon {
     display: none;
   }
 }
