--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,6 @@ img {
 }
 
 /* Header */
-
 .header {
   border-bottom: 1px solidv var(--third-color);
   box-sizing: border-box;
@@ -86,10 +85,6 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-navigation {
-  display: flex;
-  align-items: center;
-}
 .header-logo {
   font-family: "Raleway", sans-serif;
   text-decoration: none;
@@ -212,6 +207,18 @@ img {
 .hero-button:hover {
   background: var(--hovet-background-color);
 }
+.btn-menu-burger {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+}
+
+.btn-menu-burger .btn-mobile:focus,
+.btn-menu-burger .btn-mobile:hover {
+  fill: var(--active-color);
+}
 /* Mobile menu */
 
 .mobile-menu {
@@ -236,6 +243,8 @@ img {
 .mobile-menu.is-open {
   transform: scaleY(1);
   transform-origin: top;
+  transition: transform 800ms var(--animation-function);
+  pointer-events: all;
 }
 
 .mobile-menu.is-open .link.mob-menu-open {
@@ -255,26 +264,19 @@ img {
   justify-content: center;
   width: 24px;
   height: 24px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: var(--third-color);
+  border: 1px solid rgba(46, 47, 66, 0.1);
+  padding: 0;
+  display: flex;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-menu-close:focus,
 .btn-menu-close:hover {
   background-color: var(--active-color);
-  fill: var(--secondary-font-color);
-}
-
-.mob-nav .link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: block;
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-decoration-line: none;
+  fill: var(--advantages-box-color);
 }
 
 .mob-nav .link:hover,
@@ -287,16 +289,20 @@ img {
   flex-direction: column-reverse;
 }
 
-.address-mob .ping-mob {
+.address-mob .contact-mobile {
   display: block;
 }
 
-.address-mob .ping-mob:hover,
-.address-mob .ping-mob:focus {
+.address-mob .contact-mobile:hover,
+.address-mob .contact-mobile:focus {
+  color: var(--accent-color);
+}
+.address-mob .contact-tel:hover,
+.address-mob .contact-tel:focus {
   color: var(--accent-color);
 }
 
-.ping-mob {
+.contact-mobile {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--primary-text-color);
   font-style: normal;
@@ -307,37 +313,68 @@ img {
   text-decoration-line: none;
 }
 
-.ping-mob.mobil {
-  font-weight: 700;
+.contact-tel {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-style: normal;
+  font-weight: 500;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
+  text-decoration-line: none;
+  text-transform: capitalize;
   color: var(--accent-color);
 }
 
 .menu-address {
   margin-top: auto;
 }
+/* Mobile menu */
+.mob-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-decoration-line: none;
+}
+.mob-item {
+  margin-bottom: 40px;
+}
+.mob-list .mob-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mobile-mail {
+  margin-bottom: 48px;
+}
 
+.mobile-tel {
+  margin-bottom: 40px;
+}
+
+.mobile-social-item:not(:last-child) {
+  margin-right: 28px;
+}
 /* Mobile menu's social */
 
-.mob-social-list {
+.mobile-social-list {
   display: flex;
-  margin: 0;
+  margin-top: 48px;
   padding: 0;
 }
 
-.chapter-social {
+.mobile-social-item {
   list-style: none;
   width: 40px;
   height: 40px;
 }
 
-.chapter-social:not(:last-child) {
+.mobile-social-item:not(:last-child) {
   margin-right: 56px;
 }
 
-.chapter-social .mobile-link {
+.mobile-social-item .mobile-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -348,8 +385,8 @@ img {
   background-color: var(--hover-team-color);
 }
 
-.chapter-social .mobile-link:focus,
-.chapter-social .mobile-link:hover {
+.mobile-social-item .mobile-link:focus,
+.mobile-social-item .mobile-link:hover {
   background-color: var(--active-color);
 }
 
@@ -443,7 +480,7 @@ img {
   background: var(--background-color);
   box-shadow: var(--box-shadow);
   border-radius: 0px 0px 4px 4px;
-  text-align: center;
+
   margin-left: auto;
   margin-right: auto;
 }
@@ -785,34 +822,26 @@ img {
   white-space: nowrap;
   overflow: hidden;
 }
-
-.portfolio {
-  padding-top: 96px;
-  padding-bottom: 120px;
+.portfolio-container {
+  padding-top: 64px;
+  padding-bottom: 96px;
 }
 
-.portfolio-list {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-  list-style: none;
-  margin-bottom: 72px;
-}
 /*-------content-set-------*/
 
 .content-set {
-  margin: 0;
   list-style: none;
   display: flex;
-  flex-wrap: wrap;
-  row-gap: 48px;
-  column-gap: 24px;
+  align-items: center;
 }
-
 .content-item {
-  flex-basis: calc((100% - 2 * 24px) / 3);
 }
-
+/*.content-item {
+  flex-basis: calc((100% - 2 * 24px) / 3);
+}*/
+.portfolio-list {
+  align-items: center;
+}
 .portfolio-item {
   font-weight: 500;
   font-size: 20px;
