--- a/css/styles.css
+++ b/css/styles.css
@@ -710,7 +710,7 @@ img {
 }
 .subscribe-input {
   width: 100%;
-  height: 40px;
+
   background-color: transparent;
   border: 1px solid var(--footer-media-title-color);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -718,7 +718,7 @@ img {
   outline: transparent;
   width: 264px;
   height: 40px;
-  padding-left: 16px;
+  padding: 8px 16px;
 
   font-size: 12px;
   line-height: 2;
@@ -834,11 +834,7 @@ img {
   display: flex;
   align-items: center;
 }
-.content-item {
-}
-/*.content-item {
-  flex-basis: calc((100% - 2 * 24px) / 3);
-}*/
+
 .portfolio-list {
   align-items: center;
 }
