--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,36 +5,18 @@
     margin-right: auto;
   }
 
-  .header-container {
-    width: 428px;
-  }
-
   .contact-mobile.mobility {
     font-size: 26px;
+  }
+  .mobile-social-item {
+    list-style: none;
+    width: 40px;
+    height: 40px;
   }
 
   .modal-policy {
     font-size: 8px;
     letter-spacing: 0.02em;
-  }
-  /* Mobile menu */
-  .mob-item {
-    margin-bottom: 40px;
-  }
-  .mobile-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .mob-list .mob-item:not(:last-child) {
-    margin-bottom: 40px;
-  }
-  .mobile-mail {
-    margin-bottom: 48px;
-  }
-
-  .mobile-tel {
-    margin-bottom: 40px;
   }
 
   .header-btn-mobile-close {
@@ -65,33 +47,32 @@
     background-color: var(--background-hero-color);
     max-width: 428px;
   }
-  .hero-container {
-    padding: 112px 56px;
+  .hero {
+    padding-top: 112px;
+    padding-bottom: 112px;
   }
 
-  .advantages-container {
-    padding: 96px 0px;
-    max-width: 428px;
-  }
   .advantages-title {
     text-align: center;
   }
   .advantages-list {
     display: flex;
     flex-direction: column;
+    row-gap: 72px;
+    align-items: center;
   }
   .advantages-item {
-    margin-bottom: 72px;
+    margin-bottom: 0;
   }
   .advantages-item:last-child {
     margin-bottom: 0;
   }
-  .customers-container {
-    padding: 96px 0;
+  .customers {
+    padding-top: 96px;
+    padding-bottom: 96px;
   }
 
   .customer-list {
-    max-width: 404px;
     margin-right: auto;
     margin-left: auto;
     display: flex;
@@ -112,9 +93,11 @@
     width: 100%;
     height: 100%;
   }
-  .team-container {
-    padding: 96px 0;
+  .team {
+    padding-top: 96px;
+    padding-bottom: 96px;
   }
+
   .portfolio-container {
     padding: 48px 0;
   }
@@ -135,9 +118,8 @@
     (-o-min-device-pixel-ratio: 1/1),
     (min-resolution: 96dpi),
     (min-resolution: 1dppx) {
-    .section.hero {
+    .hero {
       background-image: linear-gradient(
-          to right,
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
@@ -171,6 +153,35 @@
   }
 }
 @media screen and (max-width: 767px) {
+  @media (min-device-pixel-ratio: 1),
+    (-webkit-min-device-pixel-ratio: 1),
+    (-o-min-device-pixel-ratio: 1/1),
+    (min-resolution: 96dpi),
+    (min-resolution: 1dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-mobile-1x.jpg);
+      background-color: var(--background-hero-color);
+    }
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (-o-min-device-pixel-ratio: 2/1),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-mobile-2x.jpg);
+      background-color: var(--background-hero-color);
+    }
+  }
   .header-list,
   .address-list {
     display: none;
@@ -178,13 +189,14 @@
   .header-logo {
     margin-right: 0;
   }
-  .mobile-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
   .header {
     padding: 24px 0;
+  }
+  .mobile-social-item {
+    margin-right: 56px;
+  }
+  .mobile-social-item:last-child {
+    margin-right: 0;
   }
   .portfolio-img {
     width: 396px;
@@ -266,13 +278,28 @@
     font-size: 26px;
   }
   .mobile-social-item {
-    margin-right: 40px;
+    margin-right: 30px;
   }
 
-  .mobile-social-item:not(:last-child) {
-    margin-right: 29px;
+  .mobile-social-item:last-child {
+    margin-right: 0;
   }
-  .mobile-social-item:not(:last-child) {
-    margin-right: 29px;
+  .hero {
+    padding-top: 112px;
+    padding-bottom: 112px;
+  }
+}
+
+@media screen and (max-width: 408px) {
+  .modal {
+    width: 320px;
+    height: 584px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-header {
+    max-width: 428px;
+    margin: 0 auto;
   }
 }
